split out api service to its own repository

--- a/ansible/hosts.yml
+++ b/ansible/hosts.yml
@@ -61,6 +61,7 @@ all:
         api_hostname: api.openrailwaymap.org
         website_dir: /var/www/www.openrailwaymap.org
         openrailwaymap_user_home: /srv/openrailwaymap
+        api_dir: /srv/orm-api
 
     blog:
       hosts:
@@ -136,4 +137,3 @@ all:
           users:
             - name: backup
               ssh_pub_key: 'ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIF3sWWFwMR6Goke3hCYs0p2b/xQSUUmqNCV0gP86qocW access backups'
-
