rectify gettext/locales situation
- php-gettext is a 3rd party gettext implementation that's not used
  currently anyway, not the PHP native gettext integration.
- Install locales-all package to have all locales for gettext available
  on the system. This is the easiest way for PHP gettext to work for
  sure.

--- a/ansible/roles/website/tasks/main.yml
+++ b/ansible/roles/website/tasks/main.yml
@@ -6,7 +6,7 @@
   - name: Install required packages from APT
     apt:
       # package nodejs-legacy is not needed with Debian >= 10 because the nodejs package contains a symlink /usr/bin/nodejs
-      name: [postgresql-common, php-gettext, unzip, zip, python3-pip, npm, nodejs, wget, php-pgsql, php-fpm, apache2, python3-pil, python3-cairo, python3-ply]
+      name: [postgresql-common, locales-all, unzip, zip, python3-pip, npm, nodejs, wget, php-pgsql, php-fpm, apache2, python3-pil, python3-cairo, python3-ply]
 
   - name: Install pojson from Pip
     pip:
