--- a/ansible/roles/blog/tasks/main.yml
+++ b/ansible/roles/blog/tasks/main.yml
@@ -22,13 +22,23 @@
       force: yes
       version: master
 
-  - name: Enable Apache modules for php-fpm
+  - name: Enable/Disable Apache modules
     apache2_module:
-      name: '{{ item }}'
-      state: present
+      name: '{{ item.name }}'
+      state: '{{ item.state }}'
     loop:
-      - 'proxy_fcgi'
-      - 'setenvif'
+      - name: 'proxy_fcgi'
+        state: 'present'
+      - name: 'setenvif'
+        state: 'present'
+      - name: 'php7.3'
+        state: 'absent'
+      - name: 'php7.3-fpm'
+        state: 'present'
+      - name: 'mpm_prefork'
+        state: 'absent'
+      - name: 'mpm_event'
+        state: 'present'
     notify:
       - systemd restart apache2
 
