Switch to tile expiry mechanism similar to tile.osm.org

--- a/scripts/config.cfg
+++ b/scripts/config.cfg
@@ -79,7 +79,8 @@ OSM2PGSQL_FLATNODES=/nvme/data/flatnodes/flat.nodes
 # Number of processes for Osm2pgsql for update
 OSM2PGSQL_NUMBER_PROCESSES=2
 # Zoom levels to expire tiles at
-EXPIRE_TILES_ZOOM=12-19
+EXPIRE_TILES_ZOOM_MIN=12
+EXPIRE_TILES_ZOOM_MAX=19
 # Path for tile expiry output file for Osm2pgsql
 EXPIRE_OUTPUT=/nvme/data/tileupdate/expiry.log
 # Metatile directory
