--- a/ansible/roles/tileserver_step2/tasks/main.yml
+++ b/ansible/roles/tileserver_step2/tasks/main.yml
@@ -207,6 +207,31 @@
     notify:
       - systemd reload apache2
 
+  - name: Configure Apache2 MaxRequestWorkers
+    copy:
+      dest: /etc/apache2/conf-available/max_request_workers.conf
+      owner: root
+      group: root
+      mode: 0644
+      content: |
+        {% if apache2.max_request_workers is defined %}
+        <IfModule mpm_event_module>
+            # MaxRequestWorkers could be raised up to ServerLimit * ThreadsPerChild (defaults to 16 and 25)
+            # For default of ThreadsPerChild, see mods-available/mpm_event.conf
+            MaxRequestWorkers {{ apache2.max_request_workers }}
+        </IfModule>
+        {% endif %}
+    register: max_request_workers_result
+    when: apache2.max_request_workers is defined or apache2.min_spare_servers is defined or apache2.max_spare_servers is defined
+
+  - name: Enable /etc/apache2/conf-available/max_request_workers.conf
+    shell:
+      cmd: a2enconf max_request_workers.conf
+      chdir: /etc/apache2/conf-available
+    when: max_request_workers_result.changed
+    notify:
+      - systemd reload apache2
+
   - name: Create Tirex configuration for all map styles
     copy:
       dest: '/etc/tirex/renderer/mapnik/{{ item.stylename }}.conf'
