--- a/ansible/roles/blog/tasks/main.yml
+++ b/ansible/roles/blog/tasks/main.yml
@@ -44,6 +44,7 @@
     shell:
       cmd: a2enconf php7.3-fpm
       chdir: /etc/apache2/conf-available
+      creates: '/etc/apache2/conf-enabled/php7.3-fpm.conf'
     notify:
       - systemd reload apache2
 
