--- a/ansible/roles/blog/tasks/main.yml
+++ b/ansible/roles/blog/tasks/main.yml
@@ -13,6 +13,7 @@
       owner: root
       group: root
       state: directory
+      mode: '0755'
 
   - name: Clone Git repository of the blog
     git:
