--- a/ansible/roles/tileserver_step2/tasks/main.yml
+++ b/ansible/roles/tileserver_step2/tasks/main.yml
@@ -82,6 +82,7 @@
       owner: root
       group: root
       state: directory
+      mode: '0755'
 
   - name: Install mod_tile, tirex-core and tirex-backend-mapnik
     apt:
