--- a/ansible/openrailwaymap/openrailwaymap.yml
+++ b/ansible/openrailwaymap/openrailwaymap.yml
@@ -30,6 +30,12 @@
         apache2:
           max_request_workers: 350
         tileserver:
+          styles:
+            - standard
+            - maxspeed
+            - signals
+            - electrification
+            - gauge
           development_tools: true
           hostname: tiles.openrailwaymap.org
           hostname_aliases:
