Add electrification and gauge to monitoring

--- a/ansible/roles/munin_node/tasks/main.yml
+++ b/ansible/roles/munin_node/tasks/main.yml
@@ -250,6 +250,8 @@
           - standard
           - maxspeed
           - signals
+          - electrification
+          - gauge
 
       - name: Configure Tirex plugins
         copy:
