--- a/ansible/hosts.yml
+++ b/ansible/hosts.yml
@@ -7,6 +7,7 @@ all:
         max_request_workers: 350
   vars:
     ansible_python_interpreter: python3
+    ansible_user: root
 
   children:
     base:
