--- a/.github/workflows/ansible-lint.yml
+++ b/.github/workflows/ansible-lint.yml
@@ -12,4 +12,5 @@ jobs:
       - name: Lint Ansible Playbook
         uses: ansible/ansible-lint-action@master
         with:
+          override-deps: ansible-lint>=5.3.2
           targets: "ansible/roles/*/tasks/*.yml ./ansible/*/*.yml ansible/*.yml"
