Start migrating to a new Ansible structure
This commit migrates base, security and tileserver

--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,5 +1,6 @@
 [defaults]
 ansible_python_interpreter = python3
+inventory = hosts
 
 [ssh_connection]
 # -C -o ControlMaster=auto -o ControlPersits=60s are default options and need to be repeated
