--- a/ansible/openrailwaymap/security.yml
+++ b/ansible/openrailwaymap/security.yml
@@ -1,6 +1,8 @@
 # SPDX-License-Identifier: MIT
 - hosts: all
+  name: Settings related to security
   remote_user: root
+  tags: security
 
   tasks:
   - name: Disable SSH login without public key
